--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
   "name": "gamepidia",
   "version": "0.1.0",
   "private": true,
+  
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "framer-motion": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-oauth": "^1.0.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
